Update messaging for folks with JS disabled

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,14 @@
   </head>
   <body>
     <noscript>
-      You need to enable JavaScript to run this app.
+      <div style="font-size: 22px; font-family: sans;">
+        It looks like you don't have JavaScript enabled, but org-web is a big, fancy React app that requires JavaScript to run!
+
+        <br />
+        <br />
+
+        If you're interested in inspecting the source code yourself (or even deploying your own version of the project), you can find the project's repo here: <a href="https://github.com/DanielDe/org-web">https://github.com/DanielDe/org-web</a>
+      </div>
     </noscript>
     <div id="root"></div>
     <script>
