--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,9 @@
       </div>
     </noscript>
     <div id="root"></div>
+    <script async defer src="https://apis.google.com/js/api.js"
+            onload="this.onload=function() {}; window.handleGoogleDriveClientLoad && window.handleGoogleDriveClientLoad()"
+            onreadystatechange="if (this.readyState === 'complete') this.onload()"></script>
     <script>
      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
