Update references to Dropbox to include GDrive

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="description" content="Directly edit org-mode files online. Syncs with Dropbox. Optimized for mobile.">
+    <meta name="description" content="Directly edit org-mode files online. Optimized for mobile. Syncs with Dropbox and Google Drive.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#5E348C">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
