feat: Rename to `organice`

--- a/public/index.html
+++ b/public/index.html
@@ -8,19 +8,19 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/org-web.png">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/organice.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
-    <title>org-web</title>
+    <title>organice</title>
   </head>
   <body>
     <noscript>
       <div style="font-size: 22px; font-family: sans;">
-        It looks like you don't have JavaScript enabled, but org-web is a big, fancy React app that requires JavaScript to run!
+        It looks like you don't have JavaScript enabled, but organice is a big, fancy React app that requires JavaScript to run!
 
         <br />
         <br />
 
-        If you're interested in inspecting the source code yourself (or even deploying your own version of the project), you can find the project's repo here: <a href="https://github.com/DanielDe/org-web">https://github.com/DanielDe/org-web</a>
+        If you're interested in inspecting the source code yourself (or even deploying your own version of the project), you can find the project's repo here: <a href="https://github.com/200ok-ch/organice">https://github.com/200ok-ch/organice</a>
       </div>
     </noscript>
     <div id="root"></div>
