--- a/public/index.html
+++ b/public/index.html
@@ -1,40 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="description" content="Directly edit org-mode files online. Optimized for mobile. Syncs with Dropbox and Google Drive.">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="theme-color" content="#5E348C">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/organice.png">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
+    <meta charset="utf-8" />
+    <meta
+      name="description"
+      content="Directly edit org-mode files online. Optimized for mobile. Syncs with Dropbox and Google Drive."
+    />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+    <meta name="theme-color" content="#5E348C" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/organice.png" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.1.1/css/all.css"
+      integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ"
+      crossorigin="anonymous"
+    />
     <title>organice</title>
   </head>
   <body>
     <noscript>
       <div style="font-size: 22px; font-family: sans;">
-        It looks like you don't have JavaScript enabled, but organice is a big, fancy React app that requires JavaScript to run!
+        It looks like you don't have JavaScript enabled, but organice is a big, fancy React app that
+        requires JavaScript to run!
 
         <br />
         <br />
 
-        If you're interested in inspecting the source code yourself (or even deploying your own version of the project), you can find the project's repo here: <a href="https://github.com/200ok-ch/organice">https://github.com/200ok-ch/organice</a>
+        If you're interested in inspecting the source code yourself (or even deploying your own
+        version of the project), you can find the project's repo here:
+        <a href="https://github.com/200ok-ch/organice">https://github.com/200ok-ch/organice</a>
       </div>
     </noscript>
     <div id="root"></div>
-    <script async defer src="https://apis.google.com/js/api.js"
-            onload="this.onload=function() {}; window.handleGoogleDriveClientLoad && window.handleGoogleDriveClientLoad()"
-            onreadystatechange="if (this.readyState === 'complete') this.onload()"></script>
+    <script
+      async
+      defer
+      src="https://apis.google.com/js/api.js"
+      onload="this.onload=function() {}; window.handleGoogleDriveClientLoad && window.handleGoogleDriveClientLoad()"
+      onreadystatechange="if (this.readyState === 'complete') this.onload()"
+    ></script>
     <script>
-     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                              m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-                              })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      (function(i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        (i[r] =
+          i[r] ||
+          function() {
+            (i[r].q = i[r].q || []).push(arguments);
+          }),
+          (i[r].l = 1 * new Date());
+        (a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m);
+      })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-     ga('create', 'UA-76452336-2', 'auto');
-     ga('send', 'pageview');
+      ga('create', 'UA-60858136-4', 'auto');
+      ga('send', 'pageview');
     </script>
   </body>
 </html>
