doc: WebDAV as a third synchronization back-end

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta
       name="description"
-      content="Directly edit org-mode files online. Optimized for mobile. Syncs with Dropbox and Google Drive."
+      content="Directly edit org-mode files online. Optimized for mobile. Syncs with Dropbox, Google Drive and WebDAV."
     />
     <meta
       name="viewport"
