fix: Add `<link>` to manifest in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
       crossorigin="anonymous"
     />
     <title>organice</title>
+    <link rel="manifest" href="/manifest.json">
   </head>
   <body>
     <noscript>
