--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
 
         If you're interested in inspecting the source code yourself (or even deploying your own
         version of the project), you can find the project's repo here:
-        <a href="https://github.com/200ok-ch/organice">https://github.com/200ok-ch/organice</a>
+        <a href="https://github.com/200ok-ch/organice" target="_blank" rel="noopener noreferrer">https://github.com/200ok-ch/organice</a>
       </div>
     </noscript>
     <script
