Change interface of external link: allow children

--- a/public/index.html
+++ b/public/index.html
@@ -21,11 +21,11 @@
       crossorigin="anonymous"
     />
     <title>organice</title>
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="/manifest.json" />
   </head>
   <body>
     <noscript>
-      <div style="font-size: 22px; font-family: sans;">
+      <div style="font-size: 22px; font-family: sans">
         It looks like you don't have JavaScript enabled, but organice is a big, fancy React app that
         requires JavaScript to run!
 
@@ -34,7 +34,7 @@
 
         If you're interested in inspecting the source code yourself (or even deploying your own
         version of the project), you can find the project's repo here:
-        <a href="https://github.com/200ok-ch/organice" target="_blank" rel="noopener noreferrer">https://github.com/200ok-ch/organice</a>
+        <ExternalLink href="https://github.com/200ok-ch/organice" />
       </div>
     </noscript>
     <script
