--- a/public/index.html
+++ b/public/index.html
@@ -48,27 +48,31 @@
     <script>
      var {pathname} = window.location;
 
+     const absoluteUrl = function(path) {
+        return new URL(path, document.baseURI).href;
+     };
+
      var manifest = {
          "short_name": "organice",
          "name": "organice",
          "icons": [
              {
-                 "src": "organice-512x512.png",
+                 "src": absoluteUrl("organice-512x512.png"),
                  "sizes": "512x512",
                  "type": "image/png"
              },
              {
-                 "src": "organice-192x192.png",
+                 "src": absoluteUrl("organice-192x192.png"),
                  "sizes": "192x192",
                  "type": "image/png"
              },
              {
-                 "src": "favicon.ico",
+                 "src": absoluteUrl("favicon.ico"),
                  "sizes": "64x64 32x32 24x24 16x16",
                  "type": "image/x-icon"
              }
          ],
-         "start_url": pathname || "/index.html",
+         "start_url": absoluteUrl(pathname || "/index.html"),
          "display": "standalone",
          "theme_color": "#000000",
          "background_color": "#ffffff"
