Added first draft of webshare
- added new route /capture, which lets the user select a capture
  template & target file (both parameters can be passed in the url)
- upon submit, forward the user to the target file and trigger the
  capture process there
- updated manifest, so the new capture route shows up at a share target
  in android (untested)

--- a/public/index.html
+++ b/public/index.html
@@ -75,8 +75,16 @@
          "start_url": absoluteUrl(pathname || "/index.html"),
          "display": "standalone",
          "theme_color": "#000000",
-         "background_color": "#ffffff"
-     }
+         "background_color": "#ffffff",
+          "share_target": {
+            "action": "/capture",
+            "params": {
+              "title": "captureVariable_v_title",
+              "text": "captureVariable_v_text",
+              "url": "captureVariable_v_url"
+            }
+          },
+     };
 
      const manifestBlob = new Blob([JSON.stringify(manifest)], {type: 'application/json'});
      const manifestURL = URL.createObjectURL(manifestBlob);
