Added parameter to manifest
- method is actually optional, but maybe browsers still expect it?

--- a/public/index.html
+++ b/public/index.html
@@ -78,6 +78,7 @@
          "background_color": "#ffffff",
           "share_target": {
             "action": "/capture",
+            "method": "GET",
             "params": {
               "title": "captureVariable_v_title",
               "text": "captureVariable_v_text",
