feat: Boilerplate for proper Landing page

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ"
       crossorigin="anonymous"
     />
-    <title>organice</title>
+    <title>organice - keep your life nicely organized</title>
     <link rel="manifest" href="/manifest.json" />
   </head>
   <body>
