--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta
       name="description"
-      content="Directly edit org-mode files online. Optimized for mobile. Syncs with Dropbox, Google Drive and WebDAV."
+      content="Directly edit org-mode files online. Optimized for mobile. Syncs with Dropbox, GitLab or WebDAV."
     />
     <meta
       name="viewport"
@@ -37,13 +37,6 @@
         <ExternalLink href="https://github.com/200ok-ch/organice" />
       </div>
     </noscript>
-    <script
-      async
-      defer
-      src="https://apis.google.com/js/api.js"
-      onload="this.onload=function() {}; window.handleGoogleDriveClientLoad && window.handleGoogleDriveClientLoad()"
-      onreadystatechange="if (this.readyState === 'complete') this.onload()"
-    ></script>
     <div id="root"></div>
     <script>
      var {pathname} = window.location;
