chore: Update claim

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta
       name="description"
-      content="Directly edit org-mode files online. Optimized for mobile. Syncs with Dropbox, GitLab or WebDAV."
+      content="organice is the best way get stuff done"
     />
     <meta
       name="viewport"
