fix: Use correct HTML anchor tag inside public.html <noscript>

--- a/public/index.html
+++ b/public/index.html
@@ -33,8 +33,7 @@
         <br />
 
         If you're interested in inspecting the source code yourself (or even deploying your own
-        version of the project), you can find the project's repo here:
-        <ExternalLink href="https://github.com/200ok-ch/organice" />
+        version of the project), you can find the project's repo <a href="https://github.com/200ok-ch/organice">here</a>.
       </div>
     </noscript>
     <div id="root"></div>
