refactor: Manifest the Parcel way

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       crossorigin="anonymous"
     />
     <title>organice - keep your life nicely organized</title>
-    <!-- <link rel="manifest" href="/manifest.json" /> -->
+    <link rel="manifest" href="./manifest.json" />
   </head>
   <body>
     <noscript>
